Added databaseControl and databaseHelper. Also, set backButton, newEntryButton, and spinner.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/deleteButton1"
+        android:id="@+id/deleteButton"
         android:layout_width="93dp"
         android:layout_height="58dp"
         android:layout_marginTop="44dp"
@@ -51,13 +51,13 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/openButton"
         android:layout_width="93dp"
         android:layout_height="58dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="44dp"
         android:text="Open"
-        app:layout_constraintBottom_toBottomOf="@+id/deleteButton1"
+        app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView"
         app:layout_constraintVertical_bias="0.0" />
