--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
     <Button
@@ -12,6 +13,7 @@
         android:layout_height="58dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="100dp"
+        android:background="#FF6969"
         android:text="Delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
@@ -23,6 +25,7 @@
         android:text="My Journals"
         android:textColor="@color/black"
         android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,10 +34,11 @@
 
     <Button
         android:id="@+id/newEntryButton"
-        android:layout_width="47dp"
-        android:layout_height="58dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="#7CFF73"
         android:text="+"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +50,7 @@
         android:layout_width="405dp"
         android:layout_height="467dp"
         android:layout_marginTop="12dp"
+        android:background="#F3F3F3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -56,6 +61,7 @@
         android:layout_height="58dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="44dp"
+        android:background="#7CFF73"
         android:text="Open"
         app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
         app:layout_constraintStart_toStartOf="parent"
