--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,44 +8,44 @@
     tools:context=".SettingsActivity">
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textColorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="Text Color:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintStart_toStartOf="@+id/addEditColorText"
+        app:layout_constraintTop_toBottomOf="@+id/addEditColorText" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/backColorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="Back Color:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintStart_toStartOf="@+id/setThemeText"
+        app:layout_constraintTop_toBottomOf="@+id/setThemeText" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/addEditColorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="Add/Edit Color:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintStart_toStartOf="@+id/backColorText"
+        app:layout_constraintTop_toBottomOf="@+id/backColorText" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/backgroundText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="Background:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/textView13"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        app:layout_constraintStart_toStartOf="@+id/textColorText"
+        app:layout_constraintTop_toBottomOf="@+id/textColorText" />
 
     <Button
         android:id="@+id/deleteAllButton"
@@ -59,7 +59,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/settingsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/setThemeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -80,26 +80,6 @@
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changeJournalName" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Delete Color:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Save Color"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <EditText
         android:id="@+id/changeJournalName"
@@ -112,7 +92,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/settingsText" />
 
     <Button
         android:id="@+id/settingsBackButton"
@@ -141,61 +121,43 @@
         android:layout_width="230dp"
         android:layout_height="33dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView14"
-        app:layout_constraintStart_toEndOf="@+id/textView14"
-        app:layout_constraintTop_toTopOf="@+id/textView14" />
-
-    <Spinner
-        android:id="@+id/saveColorSpinner"
-        android:layout_width="200dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="@+id/textView8" />
-
-    <Spinner
-        android:id="@+id/deleteColorSpinner"
-        android:layout_width="200dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView7"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+        app:layout_constraintBottom_toBottomOf="@+id/setThemeText"
+        app:layout_constraintStart_toEndOf="@+id/setThemeText"
+        app:layout_constraintTop_toTopOf="@+id/setThemeText" />
 
     <Spinner
         android:id="@+id/backColorSpinner"
         android:layout_width="200dp"
         android:layout_height="33dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView9"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toTopOf="@+id/textView9" />
+        app:layout_constraintBottom_toBottomOf="@+id/backColorText"
+        app:layout_constraintStart_toEndOf="@+id/backColorText"
+        app:layout_constraintTop_toTopOf="@+id/backColorText" />
 
     <Spinner
         android:id="@+id/addEditColorSpinner"
         android:layout_width="200dp"
         android:layout_height="33dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView11"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toTopOf="@+id/textView11" />
+        app:layout_constraintBottom_toBottomOf="@+id/addEditColorText"
+        app:layout_constraintStart_toEndOf="@+id/addEditColorText"
+        app:layout_constraintTop_toTopOf="@+id/addEditColorText" />
 
     <Spinner
         android:id="@+id/textColorSpinner"
         android:layout_width="200dp"
         android:layout_height="33dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView13"
-        app:layout_constraintStart_toEndOf="@+id/textView13"
-        app:layout_constraintTop_toTopOf="@+id/textView13" />
+        app:layout_constraintBottom_toBottomOf="@+id/textColorText"
+        app:layout_constraintStart_toEndOf="@+id/textColorText"
+        app:layout_constraintTop_toTopOf="@+id/textColorText" />
 
     <Spinner
         android:id="@+id/backgroundColorSpinner"
         android:layout_width="200dp"
         android:layout_height="33dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView12"
-        app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toTopOf="@+id/textView12" />
+        app:layout_constraintBottom_toBottomOf="@+id/backgroundText"
+        app:layout_constraintStart_toEndOf="@+id/backgroundText"
+        app:layout_constraintTop_toTopOf="@+id/backgroundText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
